--- a/File-Formats/Release-Notes/v14.1.0.41.md
+++ b/File-Formats/Release-Notes/v14.1.0.41.md
@@ -1,59 +1,49 @@
 ---
-title       : Essential Studio File Formats 2016 Vol 1 Release Notes
-description : Essential Studio File Formats  2016 Vol 1 Release Notes
-platform    : file-formats
+title : Essential Studio for File Formats  2016 Volume 1   Release Notes  
+description : Essential Studio for File Formats  2016 Volume 1   Release Notes  
+platform : file-formats
+documentation: ug
 ---
 
-# Essential Studio File Formats Release Notes
+# Essential Studio for File Formats  Release Notes  
 
-{% include release-info.html date="April 04, 2016" version="v14.1.0.41" %} 
+{% include release-info.html date="April 5, 2016"  version="v14.1.0.41" %} 
 
 ## DocIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v14.1.0.41#docio){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v14.1.0.41#docio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v14.1.0.41#docio){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v14.1.0.41#docio){:target="_blank"}
-* [WinRT Release Notes](/winrt/release-notes/v14.1.0.41#docio){:target="_blank"}
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v14.1.0.41#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v14.1.0.41#docio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v14.1.0.41#docio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.1.0.41#docio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.1.0.41#docio){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.1.0.41#docio){:target="_blank"}
+
 
 ## PDF
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v14.1.0.41#pdf){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [WinRT Release Notes](/winrt/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v14.1.0.41#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v14.1.0.41#pdf){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v14.1.0.41#pdf){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.1.0.41#pdf){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [Xamarin.Android Release Notes](/xamarin-android/release-notes/v14.1.0.41#pdf){:target="_blank"}
-* [Xamarin.iOS Release Notes](/xamarin-ios/release-notes/v14.1.0.41#pdf){:target="_blank"}
+
 
 ## Presentation
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v14.1.0.41#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.1.0.41#presentation){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v14.1.0.41#presentation){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.1.0.41#presentation){:target="_blank"}
+
 
 ## XlsIO
 
 * [ASP.NET Release Notes](/aspnet/release-notes/v14.1.0.41#xlsio){:target="_blank"}
-* [ASP.NET (Classic) Release Notes](/aspnet-classic/release-notes/v14.1.0.41#xlsio){:target="_blank"}
 * [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v14.1.0.41#xlsio){:target="_blank"}
-* [ASP.NET MVC (Classic) Release Notes](/aspnetmvc-classic/release-notes/v14.1.0.41#xlsio){:target="_blank"}
-* [WinRT Release Notes](/winrt/release-notes/v14.1.0.41#xlsio){:target="_blank"}
-* [Windows Phone Release Notes](/wp8/release-notes/wp-winrt/v14.1.0.41#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v14.1.0.41#xlsio){:target="_blank"}
 * [UWP Release Notes](/uwp/release-notes/v14.1.0.41#xlsio){:target="_blank"}
 * [Windows Forms Release Notes](/windowsforms/release-notes/v14.1.0.41#xlsio){:target="_blank"}
 * [WPF Release Notes](/wpf/release-notes/v14.1.0.41#xlsio){:target="_blank"}
-* [Xamarin.Forms Release Notes](/xamarin/release-notes/v14.1.0.41#xlsio){:target="_blank"}
