--- a/File-Formats/Release-Notes/v16.4.0.52.md
+++ b/File-Formats/Release-Notes/v16.4.0.52.md
@@ -11,39 +11,39 @@ documentation: ug
 
 ## DocIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52#docio){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52#docio){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52#docio){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/v16.4.0.52#docio){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52#docio){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/v16.4.0.52#docio){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v16.4.0.52?type=all#docio){:target="_blank"}
 
 
 ## PDF
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52#pdf){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52#pdf){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52#pdf){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/v16.4.0.52#pdf){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52#pdf){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/v16.4.0.52#pdf){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v16.4.0.52?type=all#pdf){:target="_blank"}
 
 
 ## Presentation
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52#presentation){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52#presentation){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52#presentation){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52#presentation){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/v16.4.0.52#presentation){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/v16.4.0.52#presentation){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v16.4.0.52?type=all#presentation){:target="_blank"}
 
 
 ## XlsIO
 
-* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52#xlsio){:target="_blank"}
-* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52#xlsio){:target="_blank"}
-* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52#xlsio){:target="_blank"}
-* [UWP Release Notes](/uwp/release-notes/v16.4.0.52#xlsio){:target="_blank"}
-* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52#xlsio){:target="_blank"}
-* [WPF Release Notes](/wpf/release-notes/v16.4.0.52#xlsio){:target="_blank"}
+* [ASP.NET Release Notes](/aspnet/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
+* [ASP.NET MVC Release Notes](/aspnetmvc/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
+* [ASP.NET Core Release Notes](/aspnet-core/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
+* [UWP Release Notes](/uwp/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
+* [Windows Forms Release Notes](/windowsforms/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
+* [WPF Release Notes](/wpf/release-notes/v16.4.0.52?type=all#xlsio){:target="_blank"}
