--- a/File-Formats/Release-Notes/v17.1.0.32.md
+++ b/File-Formats/Release-Notes/v17.1.0.32.md
@@ -7,7 +7,7 @@ documentation: ug
 
 # Essential Studio for File Formats  Release Notes  
 
-{% include release-info.html date="March 11, 2019" version="v17.1.0.32" %} 
+{% include release-info.html date=site.releasedate.2019_vol_1_beta  version="v17.1.0.32" %} 
 
 ## DocIO
 
